configuring https by default to fix resource load issues

--- a/prod/public/css/app.css
+++ b/prod/public/css/app.css
@@ -1,7 +1,7 @@
 /*
  *
  *   INSPINIA - Responsive Admin Theme
- *   version 2.7
+ *   version 2.7.1
  *
 */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&lang=en");
@@ -198,7 +198,6 @@ h3, h4, h5 {
 }
 
 .pace-done .nav-header {
-  -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
@@ -375,13 +374,11 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
 }
 
 .pace-done .navbar-static-side, .pace-done .nav-header, .pace-done li.active, .pace-done #page-wrapper, .pace-done .footer {
-  -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
 .navbar-fixed-top {
   background: #fff;
-  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   border-bottom: 1px solid #e7eaec !important;
   z-index: 2030;
@@ -632,7 +629,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
   color: #1ab394;
 }
 
-.top-navigation .nav > li.active {
+.top-navigation .navbar .nav > li.active {
   background: #fff;
   border: none;
 }
@@ -947,7 +944,6 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 .btn-outline {
   color: inherit;
   background-color: transparent;
-  -webkit-transition: all .5s;
   transition: all .5s;
 }
 
@@ -1049,10 +1045,13 @@ button.dim:active:before {
   background-color: #D1DADE;
   color: #5E5E5E;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 10px;
   font-weight: 600;
   padding: 3px 8px;
   text-shadow: none;
+}
+
+.nav .label, .ibox .label {
+  font-size: 10px;
 }
 
 .badge {
@@ -1136,7 +1135,6 @@ button.dim:active:before {
 .onoffswitch-inner {
   width: 200%;
   margin-left: -100%;
-  -webkit-transition: margin 0.3s ease-in 0s;
   transition: margin 0.3s ease-in 0s;
 }
 
@@ -1178,7 +1176,6 @@ button.dim:active:before {
   top: 0;
   bottom: 0;
   right: 44px;
-  -webkit-transition: all 0.3s ease-in 0s;
   transition: all 0.3s ease-in 0s;
 }
 
@@ -1565,7 +1562,6 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 }
 
 .elements-list li.active {
-  -webkit-transition: none;
   transition: none;
 }
 
@@ -1988,10 +1984,8 @@ div.dt-button-info {
   color: inherit;
   display: block;
   padding: 6px 12px;
-  -webkit-transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
   transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
   width: 100%;
-  font-size: 14px;
 }
 
 .form-control:focus, .single-line:focus {
@@ -2092,7 +2086,6 @@ div.dt-button-info {
   display: block;
   width: 200%;
   margin-left: -100%;
-  -webkit-transition: margin 0.3s ease-in 0s;
   transition: margin 0.3s ease-in 0s;
 }
 
@@ -2136,7 +2129,6 @@ div.dt-button-info {
   top: 0;
   bottom: 0;
   right: 36px;
-  -webkit-transition: all 0.3s ease-in 0s;
   transition: all 0.3s ease-in 0s;
 }
 
@@ -2475,7 +2467,6 @@ div.dt-button-info {
   border: 1px dashed #bbb;
   min-height: 100px;
   background-color: #e5e5e5;
-  background-image: -webkit-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), -webkit-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
   background-image: linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
   background-size: 60px 60px;
   background-position: 0 0, 30px 30px;
@@ -3800,6 +3791,11 @@ body.tour-open .animated {
 
 .sidebar-container .sidebar-message {
   padding: 15px 20px;
+}
+
+.sidebar-container .sidebar-message .media-body {
+  display: block;
+  width: auto;
 }
 
 .sidebar-container .sidebar-message .message-avatar {
@@ -6703,11 +6699,8 @@ body.body-small .vote-icon {
   position: relative;
   height: 0;
   overflow: hidden;
-  -webkit-transition-timing-function: ease;
   transition-timing-function: ease;
-  -webkit-transition-duration: .35s;
   transition-duration: .35s;
-  -webkit-transition-property: height, visibility;
   transition-property: height, visibility;
 }
 
@@ -7715,7 +7708,6 @@ body.body-small .vote-icon {
   top: 0;
   left: 0;
   height: 2px;
-  -webkit-transition: width 1s;
   transition: width 1s;
 }
 
@@ -7818,7 +7810,6 @@ body.landing-page {
 .landing-page .navbar-default {
   background-color: transparent;
   border-color: transparent;
-  -webkit-transition: all 0.3s ease-in-out 0s;
   transition: all 0.3s ease-in-out 0s;
 }
 
@@ -7879,7 +7870,6 @@ body.landing-page {
   padding: 15px 20px 15px 20px;
   border-radius: 0 0 5px 5px;
   font-weight: 700;
-  -webkit-transition: all 0.3s ease-in-out 0s;
   transition: all 0.3s ease-in-out 0s;
 }
 
@@ -7968,7 +7958,6 @@ body.landing-page {
 
 .landing-page .carousel-fade .carousel-inner .item {
   opacity: 0;
-  -webkit-transition-property: opacity;
   transition-property: opacity;
 }
 
@@ -8708,7 +8697,6 @@ body.rtls .top-navigation .footer.fixed, body.rtls.top-navigation .footer.fixed 
   margin-right: -220px;
   position: relative;
   z-index: 2000;
-  -webkit-transition-duration: 0.8s;
   transition-duration: 0.8s;
 }
 
@@ -9075,8 +9063,6 @@ body.skin-2 #wrapper {
 
 .skin-2 #page-wrapper {
   background: #f6f6f6;
-  background: -webkit-radial-gradient(center, ellipse cover, #f6f6f6 20%, #d5d5d5 100%);
-  background: -webkit-radial-gradient(center ellipse, #f6f6f6 20%, #d5d5d5 100%);
   background: radial-gradient(ellipse at center, #f6f6f6 20%, #d5d5d5 100%);
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#f6f6f6, endColorstr=#d5d5d5)";
 }
@@ -9396,7 +9382,6 @@ body.md-skin {
 }
 
 .md-skin .pace-done .nav-header {
-  -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
@@ -9455,13 +9440,11 @@ body.md-skin {
 }
 
 .md-skin .pace-done .navbar-static-side, .md-skin .pace-done .nav-header, .md-skin .pace-done li.active, .md-skin .pace-done #page-wrapper, .md-skin .pace-done .footer {
-  -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
 .md-skin .navbar-fixed-top {
   background: #fff;
-  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   z-index: 2030;
   border-bottom: none !important;
@@ -9545,7 +9528,6 @@ body.md-skin {
 .md-skin.landing-page .navbar-default {
   background-color: transparent !important;
   border-color: transparent;
-  -webkit-transition: all 0.3s ease-in-out 0s;
   transition: all 0.3s ease-in-out 0s;
   box-shadow: none;
 }
@@ -9616,6 +9598,10 @@ body.md-skin {
   background: #ffffff;
 }
 
+.md-skin.fixed-nav #side-menu {
+  background-color: #fff;
+}
+
 .md-skin.fixed-nav #wrapper.top-navigation #page-wrapper {
   margin-top: 0;
 }
@@ -9653,7 +9639,7 @@ body.md-skin {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 220px;
-    min-height: 1200px;
+    min-height: 100vh;
   }
   .navbar-static-side {
     z-index: 2001;
@@ -9671,7 +9657,7 @@ body.md-skin {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 0;
-    min-height: 1000px;
+    min-height: 100vh;
   }
   .body-small .navbar-static-side {
     display: none;
@@ -9720,7 +9706,6 @@ body.md-skin {
     display: none;
   }
   body:not(.mini-navbar) {
-    -webkit-transition: background-color 500ms linear;
     transition: background-color 500ms linear;
     background-color: #f3f3f4;
   }
