Adds UI for  previoustips/index & /show.

--- a/prod/public/css/custom.css
+++ b/prod/public/css/custom.css
@@ -6,3 +6,7 @@ Custom CSS file to override defaults
 #page-wrapper > .wrapper.wrapper-content.animated.fadeInRight {
     max-width: 1100px;
 }
+
+.clickable-row:hover {
+    cursor: pointer;
+}
