--- a/prod/public/css/custom.css
+++ b/prod/public/css/custom.css
@@ -36,6 +36,7 @@ Custom CSS file to override defaults
     font-size: 14px;
     height: 34px;
     line-height: 34px;
+    margin-left: 2px;
 }
 .form-control {
     width: 75%;
@@ -56,7 +57,8 @@ Custom CSS file to override defaults
     padding-left: 2px;
 }
 .selected-filter-child {
-    background-color: #adacac;
+    background-color: #FFFFFF;
+    color: #2D3B45;
 }
 .filter-ui-radio {
    width: 50%;
@@ -64,4 +66,79 @@ Custom CSS file to override defaults
 }
 .nav-full-width {
    width: 98%;
+}
+.nav-second-level li:last-child {
+    margin-bottom: 0px;
+}
+
+
+/*
+* App CSS to make application look like canvas
+*/
+/* Site background color */
+.gray-bg, .bg-muted {
+    background-color: #FFFFFF;
+}
+
+/* Override app background color */
+.pace-done {
+    background-color: #2E3B46;
+}
+
+/*
+* Navigation
+*/
+/* Override navigation color */
+.nav-header {
+    background-color: #2E3B46;
+    color: #FFF;
+}
+
+/* Hover state for navigation li */
+.navbar-default .nav > li > a:hover, .navbar-default .nav > li > a:focus /*, .navbar-default .nav > li > a:active */{
+    color: #2D3B45;
+    background-color: #FFF;
+}
+
+/* Set li background-color and border */
+.nav > li.active {
+  border-left: 4px solid #008EE2;
+  background-color: #FFF;
+}
+
+/* Set active li a color in navigation to black */
+.nav > li.active > a {
+    color: #000;
+}
+
+
+/* 
+* Form Control 
+*/
+/* Chang form-control to match canvas */
+.form-control:focus, .single-line:focus {
+    border-color: #008EE2;
+}
+
+
+/*
+* Button Styles
+*/
+/* Updated to match canvas button */
+.btn-primary {
+  background-color: #FFFFFF;
+  border-color: #008EE2;
+  color: #008EE2;
+}
+
+/*
+* Color Overrides
+*/
+.label-primary, .badge-primary {
+    background-color: #008EE2;
+    color: #FFFFFF;
+}
+
+.progress-bar {
+    background-color: #008EE2;
 }
