--- a/prod/resources/assets/sass/import/_variables.scss
+++ b/prod/resources/assets/sass/import/_variables.scss
@@ -1,5 +1,5 @@
 // Basic Colors
-$navy: #1ab394;       // Primary color
+$navy: #008EE2;       // Primary color - Updated to match canvas' light blue color' 
 $dark-gray: #c2c2c2;  // Default color
 $blue: #1c84c6;       // Success color
 $lazur: #23c6c8;      // Info color
