--- a/prod/resources/assets/sass/app.scss
+++ b/prod/resources/assets/sass/app.scss
@@ -40,7 +40,7 @@
 @import "import/md-skin";
 
 // Media query style
-@import "import/media";
+@import "import/media.scss";
 
 // Custom style
 // Your custom style to override base style
