Adds code to hide first tip question (group/indy) if user already answered. Also tweaks styling on questionnaire.

--- a/prod/public/css/custom.css
+++ b/prod/public/css/custom.css
@@ -81,8 +81,8 @@ Custom CSS file to override defaults
 }
 
 /* Override app background color */
-.pace-done {
-    background-color: #2E3B46;
+.gray-bg, .bg-muted {
+    background-color: #f3f3f4;
 }
 
 /*
