--- a/prod/public/css/custom.css
+++ b/prod/public/css/custom.css
@@ -32,25 +32,35 @@ Custom CSS file to override defaults
 }
 
 .filter-ui-label {
-    width: 20%;
+    width: 15%;
     font-size: 14px;
     height: 34px;
     line-height: 34px;
     margin-left: 2px;
 }
 .form-control {
-    width: 75%;
+    width: 80%;
     margin: 2px;
+}
+
+.filter-ui-left {
+    float: left;
+}
+.filter-ui-middle {
+    clear: both;
 }
 .filter-ui-right {
     float: right;
 }
+
 .form-group {
     height: auto;
 }
 .filter-ui-radio {
-   width: 50%;
    padding-left: 35%;
+   clear:both;
+   height: 25px;
+   padding-top: 15px;
 }
 .nav-full-width {
    width: 98%;
@@ -125,22 +135,15 @@ Custom CSS file to override defaults
 /* 
 * New Report Filter UI Styles 
 */
+.full-width {
+    width:100%;
+}
+
+.filter-form-group {
+    width:48%;
+}
 #filter-question {
    clear:both;
-}
-#filter-quarter  {
-    text-align: right;
-    width:30%;
-}
-#filter-faculty {
-    text-align: right;
-    width:50%;
-}
-#filter-radio {
-    width: 20%;
-}
-.thirds {
-    padding: 10px;
 }
 .float {
     float:left;
@@ -148,9 +151,10 @@ Custom CSS file to override defaults
 .report-filter-radio  {
     margin-top:5px;
     margin-bottom: 5px;
+    width: 20%;
 }
-.full-width {
-    width:100%;
+.radio + .radio, .checkbox + .checkbox {
+    margin-top: 5px; 
 }
 #filter-header h2 {
     width: 120px;
@@ -173,25 +177,42 @@ Custom CSS file to override defaults
         width:100%;
     }
     #filter-radio {
-        margin-left: 12%;
+        margin-left: 0%;
     }
     .filter-ui-label {
         width:10%;
     }
     .form-control {
-        width:86%;
+        width:75%;
     }
-    .thirds {
-        padding:0px;   
+    .report-filter-radio {
+        width: 30%;
+    }
+    .filter-ui-radio {
+        padding-left: 25%;
     }
 }
 
 @media (max-width:768px) {
+    /* clear for mobile layout */
     .filter-ui-right {
         float: none;
     }
+    /* expand for mobile layout */
     .form-control {
         width:100%;
     }
-    
+    /* expand for mobile layout */
+    .filter-form-group {
+        width:100%;
+    }
+}
+/* center radio content */
+@media (max-width: 400px) {
+    .filter-ui-left {
+        clear: both;
+    }
+    #filter-radio {
+         padding-left: 45%;
+    }
 }
